style.css
:root {
    --dark-color: #232323;
    --accent-color: rgb(87, 111, 245);
    --light-color: #EEEEEE;
    --font-color: #444;
    --font-color-alt: rgb(163, 163, 163);
}

* {
    font-family: 'Open Sans', sans-serif;
    margin: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--light-color);
    color: var(--font-color);
}

p {
    line-height: 1.6;
}

.hero {
    background-color: var(--dark-color);
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    width: 100%;
    padding: 10em 2.5em;
}


.hero--copy {
    color: var(--light-color);
    font-size: 28px;
    font-weight: 300;
    line-height: 1.5;
}

@media screen and (min-width: 750px) {

    .hero--copy {
        width: 650px;
    }
}

@media screen and (min-width: 900px) {

    .hero--copy {
        width: 650px;
        font-size: 38px;
        margin-left: 150px;
    }
}

.hero--copy__highlight {
    color: var(--accent-color);
    font-weight: 600;
}

.bio {
    margin-top: 45px;
}

/** Project Section **/
.projects-list {
    display: flex;
    flex-direction: column;
    margin-top: 30px;
}

@media screen and (min-width: 750px) {
    .projects-list {
        display: flex;
        justify-content: center;
        align-items: center;
    }
}

.projects-section--heading {
    margin-top: 40px;
    font-size: 36px;
    text-align: left;

}

/** Project Boxes **/
.project {
    margin-bottom: 30px;
    padding: 20px;
}

@media screen and (min-width: 750px) {
    .project {
        width: 600px;

    }
}


.project--heading {
    font-size: 32px;
    margin: 0;
    color: var(--accent-color);
    margin-bottom: 0.25em;
}

/** Project Links **/

.project--links {
    display: flex;
    flex-direction: row;
    font-size: 16px;
    margin-bottom: 16px;
}

.project--links>div {
    margin-right: 15px;
}

.project--github a {
    display: flex;
    align-items: center;
}

.project--icon {
    width: 25px;
    margin-right: 6px
}


.github-link a {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 12px 0px;
}

#github-link a {
    text-decoration: none;
}

#github-link a:hover {
    color: var(--accent-color);
}


.project--link-icon {
    width: 30px;
    margin-right: 8px
}

/** Project Content (Copy & Image) */

.project p {
    margin-bottom: 10px;
    font-size: 18px;
}

.project--image {
    max-width: 100%;
}

/** Projct Stack **/
.project--stack {
    margin-top: 5px;
    margin-bottom: 10px;
    display: flex;
    flex-wrap: wrap;
}

.project--stack span {
    border: 2px solid var(--accent-color);
    color: var(--accent-color);
    font-weight: bold;
    border-radius: 2px;
    padding: 4px 10px;
    margin-right: 4px;
    margin-top: 4px;
}


/** Links **/

.nav-links ul,
.social-links ul {
    list-style: none;
    padding: 0px;
}

a {
    text-decoration: none;
    color: var(--font-color-alt);

}

a:visited {
    color: var(--font-color-alt);
}

.social-links a:hover,
.nav-links a:hover {
    color: var(--accent-color);
    border-bottom: var(--accent-color) 1px solid;
}


/** Site Content   **/

.heading {
    text-align: left;
    font-size: 36px;
    margin-left: 0.5em;
}

@media screen and (min-width: 750px) {

    .wrapper {
        width: 600px;
        margin-left: auto;
        margin-right: auto;
    }

    .heading {
        text-align: left;

    }
}

.heading__underline {
    border-bottom: var(--accent-color) 8px solid;

}


/* Skills Section */

.skills {
    margin-top: 40px;
}

.skills--icon-list {
    margin-top: 25px;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.icon {
    margin: 20px;
}

.icon img {
    height: 80px
}

img {
    max-width: 100%;
}

.icon {
    transition: transform 250ms;
}

.icon:hover {
    transform: scale(1.15);
}

/* Contact Section */

.contact {
    min-height: 200px;
}

.contact--link {
    padding-top: 40px;
    padding-bottom: 40px;
    text-align: center;
}

/** Footer Section **/

.footer {
    background-color: var(--dark-color);
    color: var(--font-color-alt);
    padding: 20px;
    width: 100%;
}

.footer--sections {
    display: flex;
    flex-wrap: wrap;
    margin-top: 30px;
    margin-bottom: 30px;
}

@media screen and (min-width: 750px) {
    .footer--sections {
        justify-content: space-around;
    }

}

.footer--sections>div {
    margin-bottom: 20px;
    margin-right: 35px;
}

.footer--subheading {
    margin-bottom: 8px;
    color: var(--light-color);
}


/** Copyright Section **/


/** Land Ack Section **/
.land {
    margin-left: auto;
    margin-right: auto;
    margin-top: 75px;
}

@media screen and (min-width: 750px) {
    .land {
        width: 700px;
    }

}

.land p {
    font-size: 14px;
    margin-bottom: 45px;
}

.land h4 {
    font-size: 18px;
    margin-bottom: 15px;
}

